tests/baselines/reference/throwType_identifier.errors.txt
tests/cases/compiler/throwType_identifier.ts(2,13): error TS2797: Type instantiated results in a throw type saying: 
    please use window.name


==== tests/cases/compiler/throwType_identifier.ts (1 errors) ====
    declare const name: throw 'please use window.name'
    console.log(name, 123, window.name)
                ~~~~
!!! error TS2797: Type instantiated results in a throw type saying: 
!!! error TS2797:     please use window.name
    export {}